--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,56 @@ img, video, audio, iframe, table, form {
 .row{
 	margin-bottom: 20px;
 }
+
+/*/////// CAROUSEL STYLES ////////*/
+
+#carousel-example-generic .item img{
+
+	height: auto;
+}
+
+.carousel-caption p{
+
+	display: none;
+}
+
+/*/////// RESPONSIVE ////////*/
+
+/*// small size devices ///*/
+
+@media only screen and (min-width: 768px){
+
+	#carousel-example-generic .item img{
+
+	height: 384px;
+	}
+
+}
+
+/*// medium size devices ///*/
+
+@media only screen and (min-width: 992px){
+
+	#carousel-example-generic .item img{
+
+	height: 496px;
+	}
+	
+	.carousel-caption p{
+
+	display: block;
+	}
+}
+
+/*// large size devices ///*/
+
+@media only screen and (min-width: 1200px){
+
+	#carousel-example-generic .item img{
+
+	height: 600px;
+	}
+	
+}
+
+
